Fri Apr 26 14:45:28 2002  Steve Huston  <shuston@riverace.com>

        * tests/Proactor_Test.cpp: Replace CALLBACK with CB. Apparantly,
          CALLBACK is a macro with MSVC.

Fri Apr 26 14:39:37 2002  Steve Huston  <shuston@riverace.com>

        * tests/Proactor_Test.cpp: Use default proactor type for platform
          if no specific proactor type for platform is chosen.

Fri Apr 26 11:39:22 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/examples.dsw:
        * examples/C++NPv2/display_logfile.dsp:
        * examples/C++NPv2/Reactor_Logging_Server.dsp:
        * examples/C++NPv2/Select_Reactor_Logging_Server.dsp:
        * examples/C++NPv2/TP_Reactor_Logging_Server.dsp:
        * examples/C++NPv2/WFMO_Reactor_Logging_Server.dsp:
          New project/workspace for the examples here so far.

        * examples/C++NPv2/WFMO_Reactor_Logging_Server.cpp: Make dtor
          public - this object is created on the stack.
          Added constructor that accepts a ACE_Reactor * and passes it up
          the inheritance chain.

        * examples/C++NPv2/Select_Reactor_Logging_Server.cpp:
        * examples/C++NPv2/TP_Reactor_Logging_Server.cpp: Add preprocessor
          check to be sure that the correct C++ library is enabled on Windows.
          Qualify "getline" call with "std::".

Fri Apr 26 07:42:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IOStream_Test.cpp:
          Corrected the debug output string of server received so that
          the formatting is the same as client received. Thanks to
          Soeren Gerlach for reporting this.

        * examples/Reactor/WFMO_Reactor/Talker.cpp:
        * examples/Reactor/Proactor/test_proactor.cpp:
        * examples/Reactor/Proactor/test_proactor2.cpp:
          Fixed BCB compile warnings

Thu Apr 25 17:34:31 2002  Steve Huston  <shuston@riverace.com>

        * bin/auto_compile: When doing 'realclean', do them in reverse