@@ -1,3 +1,9 @@
+Fri Apr 26 13:48:22 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
+
+	* utils/catior/catior.cpp: Updated the utility so that it works
+	  correctly for UIOP 1.2.  Thanks to Gautam H Thaker
+ 	  <gthaker@atl.lmco.com> for reporting this.
+
 Fri Apr 26 17:15:07 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
 
 	* docs/interfacerepo/index.html:
